@@ -8,9 +8,9 @@
 (askoptions (prompt "p") (help "h") (choices "a" "b" "c") (default 7)) ; "","pha70 7",""
 (askoptions (prompt "p") (help "h") (choices "a" "b" "c") (default 8)) ; "","Line 1: No such item '8' 0",""
 (askoptions (prompt "p") (help "h") (choices "a" "b" "") (default 4)) ; "","pha40 4",""
-(askoptions (prompt "p") (help "h") (choices "" "b" "c") (default 4)) ; "","phb40 4",""
-(askoptions (prompt "p") (help "h") (choices (if 0 "a" "") (if 1 "b") "c") (default 4)) ; "","phb40 4",""
-(askoptions (prompt "p") (help "h") (choices "" "" "") (default 4)) ; "","4",""
+(askoptions (prompt "p") (help "h") (choices "" "b" "c") (default 4)) ; "","ph40 4",""
+(askoptions (prompt "p") (help "h") (choices (if 0 "a" "") (if 1 "b") "c") (default 4)) ; "","ph40 4",""
+(askoptions (prompt "p") (help "h") (choices "" "" "") (default 4)) ; "","ph40 4",""
 (askoptions (prompt "p") (help "h") (choices "a" "b" "c") (default)) ; "","Line 1: syntax error, unexpected ')' ')'",""
 (message (askoptions (prompt "p") (help "h") (choices "a" "b" "c") (default 7))) ; "","pha70 71",""
 (debug (askoptions (prompt "p") (help "h") (choices "a" "b" "c") (default 7))) ; "","pha70 7 1",""
@@ -20,12 +20,12 @@
 (askoptions (prompt "p") (help "h") (choices "a" "b" "c") (default d)) ; "","Line 1: Undefined variable 'd' 0",""
 (set @strict 0) (askoptions (prompt p) (help "h") (choices "a" "b" "c") (default 1)) ; "","ha10 1",""
 (set @strict 0) (askoptions (prompt "p") (help h) (choices "a" "b" "c") (default 1)) ; "","pa10 1",""
-(set @strict 0) (askoptions (prompt "p") (help "h") (choices a "b" "c") (default 1)) ; "","phb10 1",""
+(set @strict 0) (askoptions (prompt "p") (help "h") (choices a "b" "c") (default 1)) ; "","ph10 1",""
 (set @strict 0) (askoptions (prompt "p") (help "h") (choices "a" "b" "c") (default d)) ; "","pha00 0",""
 (askoptions (prompt "p") (help "h") (default 3) (choices (if (IN %1110 0) (cat "A") ("B")) (if (IN %1111 1) (cat "C") ("D")))) ; "","phB30 3",""
 (askoptions (prompt "p") (help "h") (default 2) (choices (if (IN %1111 0) (cat "A") ("B")) (if (IN %1111 1) (cat "C") ("D")))) ; "","phA20 2",""
-(askoptions (prompt "p") (help "h") (default 2) (choices (if (IN %1110 0) (cat "A") ("")) (if (IN %1111 1) (cat "C") ("D")))) ; "","phC20 2",""
-(askoptions (prompt "p") (help "h") (default 2) (choices (if (IN %1110 0) ("") ("")) (if (IN %1111 1) (cat "C") ("D")))) ; "","phC20 2",""
-(askoptions (prompt "p") (help "h") (default 1) (choices (if (IN %1110 0) (cat "A") ("")) (if (IN %1111 1) (cat "C") ("D")))) ; "","phC10 1",""
-(askoptions (prompt "p") (help "h") (default 1) (choices (if (IN %1110 0) ("") ("")) (if (IN %1111 1) (cat "C") ("D")))) ; "","phC10 1",""
-(askoptions (prompt "p") (help "h") (default 3) (choices (if (IN %1110 0) "" "") (if (IN %1111 1) "" ""))) ; "","3",""
+(askoptions (prompt "p") (help "h") (default 2) (choices (if (IN %1110 0) (cat "A") ("")) (if (IN %1111 1) (cat "C") ("D")))) ; "","ph20 2",""
+(askoptions (prompt "p") (help "h") (default 2) (choices (if (IN %1110 0) ("") ("")) (if (IN %1111 1) (cat "C") ("D")))) ; "","ph20 2",""
+(askoptions (prompt "p") (help "h") (default 1) (choices (if (IN %1110 0) (cat "A") ("")) (if (IN %1111 1) (cat "C") ("D")))) ; "","ph10 1",""
+(askoptions (prompt "p") (help "h") (default 1) (choices (if (IN %1110 0) ("") ("")) (if (IN %1111 1) (cat "C") ("D")))) ; "","ph10 1",""
+(askoptions (prompt "p") (help "h") (default 3) (choices (if (IN %1110 0) "" "") (if (IN %1111 1) "" ""))) ; "","ph30 3",""
